--- a/src/styles/searchPage.scss
+++ b/src/styles/searchPage.scss
@@ -113,9 +113,11 @@
     border-radius: 5px;
     border: 1px solid var(--filters-color);
     font-size: 16px;
-
     color: var(--filters-font-input-color);
-
+    max-width: 450px;
+    @media only screen and (max-width: 615px) {
+      max-width: 400px;
+    }
     @media only screen and (max-width: 450px) {
       max-width: 300px;
     }
