--- a/src/styles/templatePage.scss
+++ b/src/styles/templatePage.scss
@@ -29,20 +29,20 @@
   margin-top: 55px;
 }
 
-.background-image:before {
-  content: '';
+.background-image {
   position: fixed;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
+  width: 100%;
+  height: 100%;
   z-index: -1;
+  transform: translateZ(0); 
 }
 
-.light:before {
+.light {
   background-image: url("/images/light-background.jpg");
 }
 
-.dark:before {
+.dark {
   background-image: url("/images/dark-background.jpg");
 }
