--- a/src/styles/templatePage.scss
+++ b/src/styles/templatePage.scss
@@ -36,13 +36,17 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  bottom: -100px;
+  opacity: 1;
 }
 
 .light {
   background-image: url("/images/light-background.jpg");
+  background-repeat: repeat;
+  background-position: bottom center;
 }
 
 .dark {
   background-image: url("/images/dark-background.jpg");
+  background-repeat: repeat;
+  background-position: bottom center;
 }
