--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,6 +7,18 @@
     font-family: "Assistant", sans-serif;
 }
 
+body,
+html {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    margin: 0px;
+    padding: 0px;
+    top: 0;
+    left: 0;
+    min-height: 100%;
+}
+
 .main-container {
     max-width: 1440px;
     margin: 0 auto;
