--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -20,7 +20,7 @@
   &__container {
     display: grid;
     grid-auto-rows: 1fr;
-    grid-template-columns: 1fr auto auto auto;
+    grid-template-columns: 1fr auto auto auto auto;
     padding: 10px;
     position: relative;
     gap: 20px;
