--- a/src/styles/mainPage.scss
+++ b/src/styles/mainPage.scss
@@ -70,13 +70,16 @@
 }
 
 .play-pause-button {
-  z-index: 2;
+  z-index: 3;
   position: fixed;
   bottom: 5px;
-  right: 0;
-  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: transparent;
   border-color: transparent;
+  width: 40px;
+  height: 40px;
   cursor: pointer;
   & path {
     transition: all 0.3s linear;
