--- a/src/styles/templatePage.scss
+++ b/src/styles/templatePage.scss
@@ -30,15 +30,12 @@
 }
 
 .background-image {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
-}
-
-.light {
   background-image: url("/images/light-background.jpg");
 }
 
