--- a/src/styles/templatePage.scss
+++ b/src/styles/templatePage.scss
@@ -30,14 +30,16 @@
 }
 
 .background-image {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
   background-image: url("/images/light-background.jpg");
+  transform: translate3d(0,0,0);
 }
+
 
 .dark {
   background-image: url("/images/dark-background.jpg");
