--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -17,7 +17,7 @@ html {
     top: 0;
     left: 0;
     min-height: 100%;
-    -webkit-overflow-scrolling: touch; 
+    overflow: auto
 }
 
 .main-container {
