fix background image

--- a/src/styles/templatePage.scss
+++ b/src/styles/templatePage.scss
@@ -37,8 +37,7 @@
   height: 100%;
   z-index: -1;
   background-image: url("/images/light-background.jpg");
-  background-repeat: repeat; /* Повторяем изображение по горизонтали и вертикали */
-  background-attachment: fixed; /* Фиксируем фон */
+  background-attachment: scroll;
 }
 
 
