--- a/src/styles/templatePage.scss
+++ b/src/styles/templatePage.scss
@@ -34,10 +34,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   z-index: -1;
   background-image: url("/images/light-background.jpg");
-  background-attachment: scroll;
 }
 
 
