fix background image

--- a/src/styles/templatePage.scss
+++ b/src/styles/templatePage.scss
@@ -34,12 +34,12 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100dvh;
+  height: 100%;
   z-index: -1;
-  background-image: url("/images/light-background.jpg");
+  background: url('/images/light-background.jpg') center center repeat fixed;
 }
 
 
 .dark {
-  background-image: url("/images/dark-background.jpg");
+  background: url('/images/dark-background.jpg') center center repeat fixed;
 }
