--- a/src/styles/departments.scss
+++ b/src/styles/departments.scss
@@ -1,79 +1,80 @@
 .departments {
-    &__container {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        gap: 30px;
-        margin: 20px;
-        @media only screen and (max-width: 1350px) {
-            grid-template-columns: 1fr 1fr 1fr;
-        }
-        @media only screen and (max-width: 1030px) {
-            grid-template-columns: 1fr 1fr;
-        }
-        @media only screen and (max-width: 680px) {
-            grid-template-columns: 1fr;
-        }
+  &__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 30px;
+    margin: 20px;
+    @media only screen and (max-width: 1350px) {
+      grid-template-columns: 1fr 1fr 1fr;
     }
-    
-    &__element {
-        width: 100%;
-        height: 100px;
-        background-color: var(--departments-background-color);
-        border-radius: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        transition: all 0.3s ease;
-        cursor: pointer;
-        padding: 5px;
-        box-shadow: 0px 0px 10px 0px var(--main-shadow-color);
-        backdrop-filter: blur(2px);
-        border: 1px solid transparent;
-        &:hover {
-            background-color: var(--departments-hover-color);
-            transform: scale(1.1);
-            border: 1px solid var(--departments-hover-color);
-        }
-        &:hover .departments__title {
-            color: var(--departments-hover-title-color);
-        }
+    @media only screen and (max-width: 1030px) {
+      grid-template-columns: 1fr 1fr;
     }
-    
-    &__title {
-        font-family: sans-serif;
-        font-size: 24px;
-        color: var(--departments-font-title-color);
-        text-align: center;
-        transition: all 0.3s ease;
+    @media only screen and (max-width: 680px) {
+      grid-template-columns: 1fr;
     }
+  }
 
+  &__element {
+    width: 100%;
+    height: 100px;
+    background-color: var(--departments-background-color);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    padding: 5px;
+    box-shadow: 0px 0px 10px 0px var(--main-shadow-color);
+    backdrop-filter: blur(2px);
+    border: 1px solid transparent;
+    @media (hover: hover) {
+      &:hover {
+        background-color: var(--departments-hover-color);
+        transform: scale(1.1);
+        border: 1px solid var(--departments-hover-color);
+      }
+      &:hover .departments__title {
+        color: var(--departments-hover-title-color);
+      }
+    }
+  }
+
+  &__title {
+    font-family: sans-serif;
+    font-size: 24px;
+    color: var(--departments-font-title-color);
+    text-align: center;
+    transition: all 0.3s ease;
+  }
 }
 
 .loading {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  
-  .spinner {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 3px solid var(--spinner-circle-color);
-    border-top-color: var(--spinner-highlighter);
-    animation: spin 1s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
-  .back-button__departments {
-    margin-left: 20px;
+.spinner {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 3px solid var(--spinner-circle-color);
+  border-top-color: var(--spinner-highlighter);
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.back-button__departments {
+  margin-left: 20px;
+}
