--- a/src/styles/searchPage.scss
+++ b/src/styles/searchPage.scss
@@ -68,8 +68,10 @@
     @media only screen and (max-width: 470px) {
       max-width: 100%;
     }
-    &:hover {
-      transform: scale(1.1);
+    @media (hover: hover) {
+      &:hover {
+        transform: scale(1.1);
+      }
     }
     @media only screen and (max-width: 470px) {
       &:hover {
